[project]
readme = { file = "README.md", content-type = "text/markdown" }
name = "forth_kernel"
version = "0.4.1"
description = "A Jupyter kernel for the Forth programming language. Allows running Forth in interactive Jupyter Notebook."
authors = [{ name = "Sohang Chopra", email = "sohangchopra@gmail.com" }]
urls = { "Source" = "https://github.com/sohang3112/iforth" }
classifiers = [
    "Framework :: IPython",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
]
requires-python = ">=3.8"
dependencies = [
    "importlib-metadata>=8.5.0",
    "ipykernel>=6.29.5",
    "jupyter-client>=8.6.3",
    "pexpect>=4.9.0",
]

[tool.mypy]
exclude = ".git,.venv,build"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["mypy>=1.14.1", "pre-commit>=3.5.0"]
test = [
    "jupyter-kernel-test>=0.7.0",
]
